Se agrego un boton y textview para poder publicar, aun se estan haciendo pruebas si es que funciona lo implementado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="facebook_app_id">633175388208550</string>
     <string name="fb_login_protocol_scheme">fb633175388208550</string>
     <string name="facebook_client_token">7ade9d5d581cc21a96955bd11d52e81e</string>
+    <string name="botoncilloprueba">BotoncilloPrueba</string>
+    <string name="texto_de_la_publicaci_n">Texto de la publicación</string>
+    <string name="publicar">Publicar</string>
 
 
 </resources>
